--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,21 @@
-hello world
+<!DOCTYPE html>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Socket.io basics</title>
+
+
+  </head>
+  <body>
+    <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        var socket = io();
+
+    </script>
+
+  </body>
+</html>
