--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Socket.io basics</title>
+    <title>Socket.io Basics</title>
 
 
   </head>
@@ -12,10 +12,7 @@
     <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
 
-    <script type="text/javascript">
-        var socket = io();
-
-    </script>
+    <script src="/js/app.js" type="text/javascript">  </script>
 
   </body>
 </html>
