--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,17 @@
 
   </head>
   <body>
+    <div class="messages">
+      
+    </div>
 
     <form id="message-form">
       <input type="text" name="message"/>
       <input type="submit" name="name" />
     </form>
 
-
     <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
     <script src="/js/app.js" type="text/javascript">  </script>
-
-
-
   </body>
 </html>
