--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="messages">
-      
+
     </div>
 
     <form id="message-form">
@@ -18,6 +18,7 @@
 
     <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
-    <script src="/js/app.js" type="text/javascript">  </script>
+    <script src="/js/app.js" type="text/javascript"></script>
+    <script src="/js/moment.js" type="text/javascript"></script>
   </body>
 </html>
