--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
 
     <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
-    <script src="/js/app.js" type="text/javascript"></script>
     <script src="/js/moment.js" type="text/javascript"></script>
+    <script src="/js/QueryParams.js" type="text/javascript"></script>
+    <script src="/js/app.js" type="text/javascript"></script>
+
   </body>
 </html>
