--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,15 @@
 
   </head>
   <body>
-    <div class="messages">
+    <h1>Join chat</h1>
+    <form class="" action="/chat.html" method="get">
 
-    </div>
+      <label for="name">Display name</label>
+      <input type="text" name="name" value="">
 
-    <form id="message-form">
-      <input type="text" name="message"/>
-      <input type="submit" name="name" />
+      <input type="submit" name="submit" value="Join chat">
+
     </form>
-
-    <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
-    <script src="/js/moment.js" type="text/javascript"></script>
-    <script src="/js/QueryParams.js" type="text/javascript"></script>
-    <script src="/js/app.js" type="text/javascript"></script>
 
   </body>
 </html>
