Added rooms to nodejs

--- a/public/chat.html
+++ b/public/chat.html
@@ -9,6 +9,9 @@
   <body>
 
     <a href="/index.html">Change details</a>
+
+    <h1 class="room-title"></h1>
+
     <div class="messages">
 
     </div>
