--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       <label for="name">Display name</label>
       <input type="text" name="name" value="">
 
+      <label for="room">Room name</label>
+      <input type="text" name="room" value="">
+
       <input type="submit" name="submit" value="Join chat">
 
     </form>
