--- a/public/chat.html
+++ b/public/chat.html
@@ -4,22 +4,46 @@
     <meta charset="utf-8">
     <title>Socket.io Basics</title>
 
+    <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
+    <style media="screen">
+      .well {
+        margin-top: 35px;
+      }
+    </style>
 
   </head>
   <body>
 
-    <a href="/index.html">Change details</a>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 well">
+      <a href="/index.html">Change details</a>
 
-    <h1 class="room-title"></h1>
+      <h1 class="room-title text-center"></h1>
 
-    <div class="messages">
+      <ul class="messages list-group">
+      </ul>
 
+      <form id="message-form">
+        <div class="form-group">
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="glyphicon glyphicon-comment"></i>
+            </span>
+            <input type="text" name="message" class="form-control"/>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <input type="submit" name="name" class="btn btn-primary btn-block"/>
+        </div>
+
+      </form>
     </div>
+  </div>
+</div>
 
-    <form id="message-form">
-      <input type="text" name="message"/>
-      <input type="submit" name="name" />
-    </form>
 
     <script src="/js/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
