--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-md-offset-4 well">
-        <h1>Join chat</h1>
+        <h1 class="text-center">Join chat</h1>
 
         <form class="" action="/chat.html" method="get">
 
